--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^7.2.11",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
@@ -26,6 +27,9 @@
     "@ionic/angular": "^4.0.0",
     "@ionic/lab": "^1.0.21",
     "@ionic/storage": "^2.2.0",
+    "@swimlane/ngx-charts": "^10.1.0",
+    "angular2-highcharts": "^0.5.5",
+    "anychart": "^8.5.1",
     "cordova-android": "^8.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -34,6 +38,8 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "highcharts": "^7.0.3",
+    "highcharts-angular": "^2.4.0",
     "ionic-calendar-date-picker": "^0.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
