--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "highcharts": "^7.0.3",
     "highcharts-angular": "^2.4.0",
     "ionic-calendar-date-picker": "^0.1.1",
+    "ionic-rating": "^1.0.6",
+    "ionic4-rating": "^1.0.9",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
