--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ionic-calendar-date-picker": "^0.1.1",
     "ionic-rating": "^1.0.6",
     "ionic4-rating": "^1.0.9",
-    "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
